Bug 1683747 - Don't use retarget when target is in <textarea>. r=botond,emilio

When using apz-retarget, hit test area is expanded. So if this area includes
previous line in <textarea>, we will select previous line. But when hit test
area is empty area of <textarea>, we should set caret to last character.

So I think that we should be disable apz-retarget if target is in <textarea>.

Differential Revision: https://phabricator.services.mozilla.com/D107441